[package]
edition = "2021"
name = "lapce-dlang"
version = "1.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git", branch = "volt" }
lapce-plugin = { git = "https://github.com/panekj/lapce-plugin-rust.git", branch = "volt" }
semver = "1.0.13"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
tar-wasi = "0.4.38"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1